Bug 290645 - Ignore any trailing delimiters if "Ignore multiple delimiters" option is on
Summary: Ignore any trailing delimiters if "Ignore multiple delimiters" option is on
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Migration/Import/Export (other bugs)
Version First Reported In: 2.4 beta5 (Calligra 2.4 beta5)
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-04 23:32 UTC by Jarosław Staniek
Modified: 2012-01-31 22:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.4 beta6 (Calligra 2.4 beta6)
Sentry Crash Report:


Attachments
test csv file (19 bytes, text/csv)
2012-01-04 23:34 UTC, Jarosław Staniek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2012-01-04 23:32:36 UTC
Ignore any trailing delimiters if "Ignore multiple delimiters" option is on, so empty extra column is not added.

Importing from a csv file:

column
0.781 
1.21*

* == extra space at the end of row

When the actual import is done extra column is added.
Comment 1 Jarosław Staniek 2012-01-04 23:34:11 UTC
Created attachment 67462 [details]
test csv file
Comment 2 Jarosław Staniek 2012-01-04 23:38:28 UTC
Git commit df7432ad81f7bfb73788b2baacb552fcdc50bdc2 by Jaroslaw Staniek.
Committed on 05/01/2012 at 00:35.
Pushed by staniek into branch 'master'.

CSV Import: ignore any trailing delimiters if needed

*Fixed bug: ignore any trailing delimiters if "Ignore multiple delimiters" option is on, so empty extra column is not added

M  +4    -0    kexi/plugins/importexport/csv/kexicsvimportdialog.cpp

http://commits.kde.org/calligra/df7432ad81f7bfb73788b2baacb552fcdc50bdc2