CSV Import: ignore any trailing delimiters if needed

*Fixed bug: ignore any trailing delimiters if "Ignore multiple delimiters" option is on, so empty extra column is not added
BUG:290645